# echo_task_client

./: .gitignore  Cargo.toml  README.md  my_database.db  my_database.db-shm  my_database.db-wal
et_database/: Cargo.toml
et_database/migrations/: 20240222212723_init.sql
et_database/src/: lib.rs
et_logger/: Cargo.toml
et_logger/src/: lib.rs
et_screen_capture/: Cargo.toml
et_screen_capture/src/: img_different_cheker.rs  img_resizer.rs  lib.rs
src/: main.rs
