[package]
name = "et_database"
version = "0.1.0"
edition = "2021"
authors = ["Konstantin <zoxo@outlook.com>"]
description = "Package for work with database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt", "macros", ]}