[package]
name = "et_screen_capture"
version = "0.1.0"
edition = "2021"
authors = ["Konstantin <zoxo@outlook.com>"]
description = "Package for get screen capture"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
xcap = "0.0.3"
tokio = {version = "1.36", features = ["full"]}
time = "0.3.34"

[dev-dependencies]

[build-dependencies]
